--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,11 +1,15 @@
 doctype html
 html(lang="en")
-   head.page
+   head.page__head
       meta(charset="UTF-8")
-      meta(http-equiv="X-UA-Compatible", content="IE=edge")
-      meta(name="viewport", content="width=device-width, initial-scale=1.0")
-      link(rel="stylesheet", href="./css/style.min.css")
-      title Valorant
+      meta(http-equiv="X-UA-Compatible" content="IE=edge")
+      meta(name="viewport" content="width=device-width, initial-scale=1.0")
+      link(rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png")
+      link(rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png")
+      link(rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png")
+      link(rel="manifest" href="./img/favicon_io/site.webmanifest")
+      link(rel="stylesheet" href="./css/style.min.css")
+      title Valorant-desctop
    body.page__body
       main.main__page
          .logo-wrap 
