create skill card

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -17,4 +17,5 @@ html(lang="en")
                img.logo__img(src="./img/SVG/figma-img.svg" alt="logo")
            span.logo__text Free files
          include modules/tab.pug
+      script(src="https://unpkg.com/vue@next")
       script(src="script/main.min.js")
