--- a/app/pug/modules/skills-hero.pug
+++ b/app/pug/modules/skills-hero.pug
@@ -2,7 +2,7 @@
     img.skills-hero__img(src="./img/cards-main/PNG/Art-04.png" alt="hero")
     .container-content
         .skills-hero-btn
-            button.skills-hero-btn__button exit 
+            button.skills-hero-btn__button back 
         .box-card-content
             .box-badge 
                 object.box-badge__image(type="image/svg+xml" data="./img/cards-main/SVG/card-04-01.svg")
