--- a/app/scss/modules/_skills-hero.scss
+++ b/app/scss/modules/_skills-hero.scss
@@ -1,18 +1,18 @@
 .skills-hero {
     position: relative;
     width: calc(2157 / 3099 * 100vw);
-    height: calc(1367 / 3099 * 100vw);
+    height: calc(1167 / 3099 * 100vw);
     display: flex;
     justify-content: flex-end;
+    align-items: flex-end;
 
     float: right;
-    align-items: center;
     margin-top: calc(75 / 1520 * 100vw);
     &__img {
         position: absolute;
         right: 0;
         bottom: 0;
-        width: calc(632 / 3099 * 100vw);
+        width: calc(560 / 3099 * 100vw);
     }
 }
 .container-content {
@@ -25,10 +25,9 @@
 .skills-hero-btn {
     padding-top: calc(65 / 3099 * 100vw);
     &__button {
-        font-family: $font-inter;
+        font-family: $font-DrukWide; 
         text-transform: uppercase;
-        font-weight: 700;
-        @include responsive-font(25, 20);
+        @include responsive-font(20, 15);
         letter-spacing: 0.1em;
         color: #FFFFFF;
 
@@ -57,9 +56,14 @@
         color: #FFFFFF;
     }
     &-text__title {
+        font-family: $font-DrukWide; 
         text-transform: uppercase;
+        letter-spacing: 0.1em;
+        
     }
     &-text__subtitle {
+        font-family: $font-DrukWide; 
+        letter-spacing: 0.1em;
     }
 }
 .box-card-content-description {
@@ -77,7 +81,7 @@
         font-family: $font-montserrat;
         font-weight: 400;
         @include responsive-font(12, 9);
-        line-height: 20px;
+        line-height: calc(35 / 3099 * 100vw);
         letter-spacing: 0.1em;
         color: #FFFFFF;
     }
